yoshimi 1.6.0 M

2019-9-26 Will
* Refined data2text to clarify structure.
* BugFix: CLI not selecting which kit item effect
  from the three part effects.
  It was changing the actual effect instead.

2019-9-25 Will
* Reverted cmake change from Iain
  With GCC it breaks on readline :(
* Reverted change to 'data2Textfrom Iain
  In the CLI kit items > 1 don't report the
  waveform as text.

2019-9-24 Will
* All CLI effects correctly reporting.
* Corrected anomaly CLI with sys/ins send.

2019-9-22 Will
* Most CLI effects switches reported as text.
* Updated docs.

2019-9-21 Will
* Further refinements to listing / text lists.
* Rationalised detune type values.
  No more shuffling between CLI, GUI and engines.
* Updated docs
* CLI reports LFO text instead of number.
* BugFix: CLI alienwah missing random entry.
  This could cause a segfault.

2019-9-20 Will
* BugFix: CLI detune type inconsistencies.
* CLI reports waveform text instead of number.
* CLI filter category/type also reports text.

2019-9-19 Will
* Improved CLI bank controls and lists.
* Removed requirement for CLI 'read' suffix.
  Some contexts can now give useful information
  with a simple 'read'.

2019-9-18 Will
* CLI can now set bank names.
* Converted GUI bank name controls.
* Updated docs.

2019-9-17 Will
* CLI conversion done for select bank & root.
  Listing not done.
* Activated CLI bank lisiting for defined entries.
* Converted GUI entries for bank & root selection.
* Implemented change root ID for CLI.
* Converted GUI entry for change root ID.

2019-9-16 Will
* Started revision of bank controls.
  Some CLI stuff not yet done properly.
* Updated docs.

2019-9-11 Will
* Forgot CLI 'return' for default copyright :(

2019-9-10 Will
* CLI can now set copyright field.
* CLI can now load/save default copyright.
* Corrected config list values.
  part and channel numbers off by 1.
* Updated docs.

2019-9-9 Will
* ALSA can autoconnect to multiple MIDI inputs :)
  Now uses a comma separated list.